--- a/BWA HTML/styles/main.css
+++ b/BWA HTML/styles/main.css
@@ -30,7 +30,7 @@ body{
 .header .logo{
     float: left;
     font-size: 32px;
-    font-family: abrilFat;
+    font-family: 'Permanent Marker';
 }
 
 .header .navigation{
