--- a/CSS Bootstrap 4/bootstrap/css/custom.css
+++ b/CSS Bootstrap 4/bootstrap/css/custom.css
@@ -47,11 +47,11 @@
   
    
 }
-.btn-video{
+/* .btn-video{
     font-size: 30px;
     padding-top: 5px;
     padding-bottom: 5px;
-}
+} */
 
 .video:hover{
     color: #815108;
@@ -67,3 +67,11 @@
 .navbar-nav .nav-link:hover{
     color: #c5bbb0;
 }
+
+
+@media only screen and (max-width: 768px) { 
+    .btn-primary, .btn-secondary{
+        margin-top: 10px;
+        margin-left: 0 !important;
+    }
+ }
